--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
     padding: 0;
 }
 
-
+body{
+    height: 98vh;
+}
 a:link{
     color: inherit;
     
@@ -11,26 +13,33 @@ a:link{
 
 .index{
     
-  background-color: black; 
+    background-color: black; 
 }
 .fotos{
-background-image: url(../images/Fondo--Fotos.png);
+    background-color: black;
 }
 .contacto{
     background-color: black;
 }
 .nosotros{
-    background-image: url(../images/Fondo-Nosotros.png);
+    background-color: black;
 }
 .agenda{
-    background-image: url(../images/Fondo-Agenda.png);
+    background-color: black;
 }
 
 img{
     background-color: black;
     border-radius: 0.5cm;
 }
-.menu{
+/*main{
+    background-color: blue;
+}*/
+#menuBurger{
+    color: white;
+}
+.menu,
+.menuIcons{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -67,11 +76,11 @@ h2{
     color: white;
 }
 
-.h2Index{
+#h2Index{
     font-family: 'Courier New', Courier, monospace;
     font-size: 70px; 
-    position: absolute;
-    top: 400px;
+    /* position: absolute;
+    top: 400px; */
     color: white;
 
 }
@@ -81,8 +90,8 @@ h2{
     
 }
 footer{
-    position: absolute;
-    bottom: 0;
+   /* position: absolute;
+    bottom: 0; */
     width: 100%;
     font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
@@ -90,6 +99,8 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: flex-end;
+
 
 }
 #list{
@@ -100,11 +111,14 @@ footer{
 
 }
 .formulario{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
     color: #f8f8f8;
-    margin-top: 15%;
+    border: none;
     font-size: x-large;
-    position: relative;
- 
+    position: center;
     margin-right: 50%;
 }
 .parrafo{
@@ -122,7 +136,7 @@ footer{
 .containerSuperior{
     width: 100%;
     border-bottom: 2px solid #f8f8f8;
-    display: inline-flex;
+    display: inline-flex; 
     padding: 10px;
 }
 .containerInferior{
@@ -131,6 +145,14 @@ footer{
     padding: 10px;
     
 }
+
+.containerInferior{
+    width: 100%;
+    display: inline-flex;
+    padding: 10px;
+    
+}
+
 .containerEmail,
 .containerLogo{
     display: flex;
@@ -147,9 +169,9 @@ footer{
     justify-content: end;
     width: 50%;
     padding: 0 30px;
-    
-    
-    
+
+
+
 }
 .ulRedes{
     display: flex;
@@ -170,6 +192,7 @@ footer{
     font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
 }
+
 .icons{
     list-style: none;
     text-decoration: none;
@@ -178,6 +201,101 @@ footer{
 }
 /* Grids*/
 header{
+
+    grid-area: header;
+}
+main{
+    grid-area: main;
+}
+footer{
+    grid-area: footer;
+}
+#grilla{
+    display: grid;
+    grid-template-rows: 15% 75% auto;
+    row-gap: 5px;
+    grid-template-areas: "header" "main" "footer";
+    height: 100%;
+}
+/* MEDIA MOBILE */
+@media screen and (min-width: 320px) {
+    #grilla{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 15% 75% auto;
+        row-gap: 5px;
+        grid-template-areas: "header" "main" "footer";
+        height: 100%;
+    }
+    .menu,
+    .footerRedes,
+    .containerEmail{
+        display: none;
+    }
+    #menuBurger{
+        display: block;
+        justify-content: end;   
+    }
+    .ulRedes{
+        display: flex;
+    flex-direction: column;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    font-size: 25px;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    text-decoration: none; 
+    }
+    .formulario{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: stretch;
+        font-family: 'Courier New', Courier, monospace;
+        color: #f8f8f8;
+        border: none;
+    }
+
     
 }
 
+/* MEDIA ESCRITORIO */
+
+@media screen and (min-width: 1200px) {
+    #grilla{
+        display: grid;
+        grid-template-rows: 15% 75% auto;
+        row-gap: 5px;
+        grid-template-areas: "header " "main" "footer";
+        height: 100%;
+    }
+    .menu,
+    .footerRedes,
+    .containerEmail{
+        display: flex;
+    }
+    #menuBurger, .footerEmail{
+        display: none;
+    }
+    .ulRedes{
+        display: flex;
+        flex-direction: row;
+        font-family: 'Courier New', Courier, monospace;
+        color: white;
+        font-size: 25px;
+        align-items: center;
+        justify-content: space-around;
+        list-style: none;
+        text-decoration: none
+}
+.formulario{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+    color: #f8f8f8;
+    border: none;
+}
+}
