--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,6 @@ main{
     align-items: center;
     
 }
-/* #list:hover {
-    background-color: white;
-    color: black;
-    border-radius: 8px;
-    padding: 5px;
-}*/
-
 
 a,
 h3{
@@ -113,6 +106,7 @@ footer{
     color: #f8f8f8;
     font-family: 'Courier New', Courier, monospace;
     background-color: rgb(0, 0, 0, 100);
+    transition: all 1s;
 
 }
 .formulario,
@@ -317,5 +311,34 @@ section{
     grid-template-columns: repeat(3, auto);
     grid-template-columns: repeat(5, auto);
     grid-gap: 10px;
+    }
+}
+/*Transiciones*/
+#list:hover {
+    background-color: white;
+    color: black;
+    border-radius: 3px;
+    padding: 1px;
+}
+#imagenes{
+    transition: all 2s;
+}
+#imagenes:hover{
+    width: 250px;
+    height: 170px;
+    
+}
+.h2Index,
+footer{
+    animation-duration: 3s;
+    animation-name: titulo;
+    animation-iteration-count: unset;
+}
+@keyframes titulo {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
     }
 }
