--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,10 @@ main{
     align-items: center;
     
 }
-
+video{
+    position: relative;
+    width: 100%;
+}
 a,
 h3{
     display: flex;
@@ -263,7 +266,7 @@ section{
         border: none;
     } 
     .galeriaFotos{
-        grid-template-columns: repeat(2, auto);
+        grid-template-columns: repeat(1, auto);
         grid-template-columns: repeat(auto);
     }
 }
@@ -323,11 +326,11 @@ section{
 #imagenes{
     transition: all 2s;
 }
-#imagenes:hover{
+/*#imagenes:hover{
     width: 250px;
     height: 170px;
     
-}
+}*/
 .h2Index,
 footer{
     animation-duration: 3s;
