--- a/css/style.css
+++ b/css/style.css
@@ -1,350 +1,366 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    height: 98vh;     
-}
-a:link{
-    color: inherit;
-    
+body {
+  height: 98vh;
 }
 
-.index{
-    
-    background-color: black; 
-}
-.fotos{
-    background-color: black;
-}
-.contacto{
-    background-color: black;
-}
-.nosotros{
-    background-color: black;
-}
-.agenda{
-    background-color: black;
+a:link {
+  color: inherit;
 }
 
-img{
-    background-color: black;
-    border-radius: 0.3cm;
+.index {
+  background-color: black;
 }
-main{
-    min-height: 80vh;
+
+.fotos {
+  background-color: black;
 }
-#menuBurger{
-    color: white;
+
+.contacto {
+  background-color: black;
 }
+
+.nosotros {
+  background-color: black;
+}
+
+.agenda {
+  background-color: black;
+}
+
+img {
+  background-color: black;
+  border-radius: 0.3cm;
+}
+
+main {
+  min-height: 80vh;
+}
+main .galeriaFotos {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 10px;
+  justify-content: space-around;
+  align-items: stretch;
+  background-color: rgba(59, 59, 59, 0.137);
+}
+
+#menuBurger {
+  color: white;
+}
+
 .menu,
 .menuIcons,
-#menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Courier New', Courier, monospace;
-    color: white;
-    background-color: black;
-    font-size: 25px;
-    border: 1px white ;
-    align-items: center;
-    
+#menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Courier New", Courier, monospace;
+  color: white;
+  background-color: black;
+  font-size: 25px;
+  border: 1px white;
+  align-items: center;
 }
-video{
-    position: relative;
-    width: 100%;
-    
+
+video {
+  position: relative;
+  width: 100%;
 }
+
 a,
-h3{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Courier New', Courier, monospace; 
-}
-h2{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 40px; 
-    color: white;
+h3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Courier New", Courier, monospace;
 }
 
-#h2Index{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 70px; 
-    /* position: absolute;
-    top: 400px; */
-    color: rgba(56, 56, 56, 0.664);
-
-}
-.galeriaFotos{
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
-    justify-content: space-around;
-    align-items: stretch;
-    background-color: rgba(59, 59, 59, 0.137);
+h2 {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 40px;
+  color: white;
 }
 
-footer{
-   /* position: absolute;
-    bottom: 0; */
-    width: 100%;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-end;
-
-
+#h2Index {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 70px;
+  /* position: absolute;
+  top: 400px; */
+  color: rgba(56, 56, 56, 0.664);
 }
-#list{
-    padding: 0 20px;
-    color: #f8f8f8;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: rgb(0, 0, 0, 100);
-    transition: all 1s;
 
+footer {
+  /* position: absolute;
+   bottom: 0; */
+  width: 100%;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 20px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
 }
+
+#list {
+  padding: 0 20px;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  background-color: rgb(0, 0, 0);
+  transition: all 1s;
+}
+
 .formulario,
-p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Courier New', Courier, monospace;
-    color: #f8f8f8;
-    border: none;
-    font-size: x-large;
-    position: center;
-    
-}
-.parrafo{
-    font-size: 50px;
-    margin-top: 5%;
-    opacity: 0.6;
-    background-color: black;
-    color: #f8f8f8;
-    
+p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Courier New", Courier, monospace;
+  color: white;
+  border: none;
+  font-size: x-large;
+  position: center;
 }
 
+.parrafo {
+  font-size: 50px;
+  margin-top: 5%;
+  opacity: 0.6;
+  background-color: black;
+  color: white;
+}
 
 /* Header nuevo */
-
-.containerSuperior{
-    width: 100%;
-    border-bottom: 2px solid #f8f8f8;
-    display: inline-flex; 
-    padding: 10px;
-}
-.containerInferior{
-    width: 100%;
-    display: inline-flex;
-    padding: 10px;
-    
+.containerSuperior {
+  width: 100%;
+  border-bottom: 2px solid #f8f8f8;
+  display: inline-flex;
+  padding: 10px;
 }
 
-.containerInferior{
-    width: 100%;
-    display: inline-flex;
-    padding: 10px;
-    
+.containerInferior {
+  width: 100%;
+  display: inline-flex;
+  padding: 10px;
+}
+
+.containerInferior {
+  width: 100%;
+  display: inline-flex;
+  padding: 10px;
 }
 
 .containerEmail,
-.containerLogo{
-    display: flex;
-    align-items:center;
-    flex-direction: row;
-    justify-content: start;
-    width: 50%;
-    
+.containerLogo {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: start;
+  width: 50%;
 }
+
 .containerRedes,
 .containerMenu,
-#containerMenu{
-    display: flex;
-    align-items:center;
-    justify-content: end;
-    width: 50%;
-    padding: 0 30px;
-
-
-
-}
-.ulRedes{
-    display: flex;
-    flex-direction: row;
-    font-family: 'Courier New', Courier, monospace;
-    color: white;
-    font-size: 25px;
-    align-items: center;
-    justify-content: space-around;
-    list-style: none;
-    text-decoration: none; 
-}
-.w4{
-    padding: 0 20px;
-    display: flex;
-    justify-content: start;
-    color: white;
-    font-size: 25px;
-    font-family: 'Courier New', Courier, monospace;
+#containerMenu {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 50%;
+  padding: 0 30px;
 }
 
-.icons{
-    list-style: none;
-    text-decoration: none;
-    padding: 0 10px;
-    color: white;   
+.ulRedes {
+  display: flex;
+  flex-direction: row;
+  font-family: "Courier New", Courier, monospace;
+  color: white;
+  font-size: 25px;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  text-decoration: none;
 }
+.ulRedes .w4 {
+  padding: 0 20px;
+  display: flex;
+  justify-content: start;
+  color: white;
+  font-size: 25px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.icons {
+  list-style: none;
+  text-decoration: none;
+  padding: 0 10px;
+  color: white;
+}
+
 /* Grids*/
-header{
+header {
+  grid-area: header;
+}
 
-    grid-area: header;
+main {
+  grid-area: main;
 }
-main{
-    grid-area: main;
+
+footer {
+  grid-area: footer;
 }
-footer{
-    grid-area: footer;
+
+section {
+  grid-area: fotos;
 }
-section{
-    grid-area: fotos;
+
+#grilla {
+  display: grid;
+  grid-template-rows: 15% 75% auto;
+  row-gap: 5px;
+  grid-template-areas: "header" "main" "footer";
+  height: 100%;
 }
-#grilla{
+
+/* MEDIA MOBILE */
+@media screen and (min-width: 320px) {
+  #grilla {
     display: grid;
+    grid-template-columns: auto;
     grid-template-rows: 15% 75% auto;
     row-gap: 5px;
     grid-template-areas: "header" "main" "footer";
     height: 100%;
-}
-/* MEDIA MOBILE */
-@media screen and (min-width: 320px) {
-    #grilla{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 15% 75% auto;
-        row-gap: 5px;
-        grid-template-areas: "header" "main" "footer";
-        height: 100%;
-    }
-    .menu,
-    .footerRedes,
-    .containerEmail{
-        display: none;
-    }
-    .containerSuperior{
-        display: flex;
-        justify-content: center;
-    }
-    #menuBurger{
-        color: white;   
-    }
-    .ulRedes{
-        display: flex;
+  }
+  .menu,
+.footerRedes,
+.containerEmail {
+    display: none;
+  }
+  .containerSuperior {
+    display: flex;
+    justify-content: center;
+  }
+  #menuBurger {
+    color: white;
+  }
+  .ulRedes {
+    display: flex;
     flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     color: white;
     font-size: 25px;
     align-items: center;
     justify-content: space-around;
     list-style: none;
-    text-decoration: none; 
-    }
-    .formulario{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: stretch;
-        font-family: 'Courier New', Courier, monospace;
-        color: #f8f8f8;
-        border: none;
-    } 
-    .galeriaFotos{
-        grid-template-columns: repeat(1, auto);
-        grid-template-columns: repeat(auto);
-    }
+    text-decoration: none;
+  }
+  .formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    font-family: "Courier New", Courier, monospace;
+    color: white;
+    border: none;
+  }
+  .galeriaFotos {
+    grid-template-columns: repeat(1, auto);
+    grid-template-columns: repeat(auto);
+  }
 }
-   
-
 /* MEDIA ESCRITORIO */
-
 @media screen and (min-width: 1200px) {
-    #grilla{
-        display: grid;
-        grid-template-rows: 15% 75% auto;
-        row-gap: 5px;
-        grid-template-areas: "header " "main" "footer";
-        height: 100%;
-    }
-    .menu,
-    .footerRedes,
-    .containerEmail{
-        display: flex;
-    }
-    #menuBurger, .footerEmail{
-        display: none;
-    }
-    .ulRedes{
-        display: flex;
-        flex-direction: row;
-        font-family: 'Courier New', Courier, monospace;
-        color: white;
-        font-size: 25px;
-        align-items: center;
-        justify-content: space-around;
-        list-style: none;
-        text-decoration: none
-    }
-    .formulario{
+  #grilla {
+    display: grid;
+    grid-template-rows: 15% 75% auto;
+    row-gap: 5px;
+    grid-template-areas: "header " "main" "footer";
+    height: 100%;
+  }
+  .menu,
+.footerRedes,
+.containerEmail {
+    display: flex;
+  }
+  #menuBurger, .footerEmail {
+    display: none;
+  }
+  .ulRedes {
+    display: flex;
+    flex-direction: row;
+    font-family: "Courier New", Courier, monospace;
+    color: white;
+    font-size: 25px;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    text-decoration: none;
+  }
+  .formulario {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Courier New', Courier, monospace;
-    color: #f8f8f8;
+    font-family: "Courier New", Courier, monospace;
+    color: white;
     border: none;
-    }
-    .galeriaFotos{
+  }
+  .galeriaFotos {
     grid-template-columns: repeat(3, auto);
     grid-template-columns: repeat(5, auto);
     grid-gap: 10px;
-    }
+  }
 }
 /*Transiciones*/
 #list:hover {
-    background-color: white;
-    color: black;
-    border-radius: 3px;
-    padding: 1px;
+  background-color: white;
+  color: black;
+  border-radius: 3px;
+  padding: 1px;
 }
-#imagenes{
-    transition: all 2s;
+
+#imagenes {
+  transition: all 2s;
 }
+
 /*#imagenes:hover{
     width: 250px;
     height: 170px;
-    
+
 }*/
 .h2Index,
-footer{
-    animation-duration: 3s;
-    animation-name: titulo;
-    animation-iteration-count: unset;
+footer {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-name: titulo;
+          animation-name: titulo;
+  -webkit-animation-iteration-count: unset;
+          animation-iteration-count: unset;
 }
+
+@-webkit-keyframes titulo {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes titulo {
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
-}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}/*# sourceMappingURL=style.css.map */
