--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,3 +1,4 @@
 $texto: 'Courier New', Courier, monospace;
 $texColor: white;
 $fondoColor: black;
+$container: (containerMenu: green, containerRedes: red, containerInferior: orange, menu: rgb(99, 250, 237));
