--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -37,7 +38,7 @@ img {
 }
 
 main {
-  min-height: 80vh;
+  min-height: 75vh;
 }
 
 .menu,
@@ -267,6 +268,16 @@ section {
     background-color: rgba(59, 59, 59, 0.137);
   }
 }
+/*MEDIA TABLET*/
+@media screen and (min-width: 760px) {
+  .galeriaFotos {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 10px;
+    justify-content: space-around;
+    align-items: stretch;
+  }
+}
 /* MEDIA ESCRITORIO */
 @media screen and (min-width: 1200px) {
   #grilla {
@@ -329,11 +340,10 @@ section {
   transition: all 2s;
 }
 
-/*#imagenes:hover{
-    width: 250px;
-    height: 170px;
+#imagenes:hover {
+  scale: 10px;
+}
 
-}*/
 .h2Index,
 footer {
   -webkit-animation-duration: 3s;
@@ -382,6 +392,7 @@ footer {
   background-color: green;
 }
 */
+
 p {
   display: flex;
   justify-content: center;
@@ -391,4 +402,38 @@ p {
   border: none;
   font-size: x-large;
   position: center;
+}
+
+.mdn {
+  background: transparent;
+}
+
+@media screen and (max-width: 600px) {
+  .selectedDia,
+.selectedAño,
+.SelectedMes,
+.selectedSalon,
+.selectedInvitados,
+.selectedNombre,
+.selectedApellido,
+.selectedTelefono {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+.mainContainer {
+  padding-left: 150px;
+  padding-top: 130px;
+  padding-right: 150px;
+}
+
+.h2Contacto {
+  padding-left: 150px;
+  padding-top: 70px;
+}
+
+.N {
+  padding-left: 50px;
+  padding-top: 100px;
+  padding-right: 50px;
 }/*# sourceMappingURL=style.css.map */
