--- a/scss/style.scss
+++ b/scss/style.scss
@@ -335,6 +335,15 @@ section{
         align-items: stretch;
         background-color: rgba(59, 59, 59, 0.137);
     }
+    .mainContainer{
+        padding-left: 150px;
+        padding-top: 130px;
+        padding-right: 150px;
+    }
+    .h2Contacto{
+        padding-left: 150px;
+        padding-top: 70px;
+    }
 }
 /*Transiciones*/
 #list:hover {
@@ -396,6 +405,19 @@ p{
     background: transparent;
 }
 
+@media screen and (min-width: 590px) {
+    .selectedDia,
+    .selectedAño, 
+    .SelectedMes, 
+    .selectedSalon, 
+    .selectedInvitados, 
+    .selectedNombre, 
+    .selectedApellido, 
+    .selectedTelefono{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
 
 @media screen and (max-width: 600px){
     .selectedDia,
@@ -411,15 +433,7 @@ p{
     }
     
 }
-.mainContainer{
-    padding-left: 150px;
-    padding-top: 130px;
-    padding-right: 150px;
-}
-.h2Contacto{
-    padding-left: 150px;
-    padding-top: 70px;
-}
+
 .N{
     padding-left: 50px;
     padding-top: 100px;
